--- a/01.html
+++ b/01.html
@@ -41,9 +41,9 @@
 					<td>照片</td>
 					<td>名稱</td>
 				</tr>
-				<tr onClick="location.href='01.html'">
+				<tr>
 					<td rowspan="3">01</td>
-					<td rowspan="3"><img class="plant_table_img" src="img/01.jpg"></td>
+					<td rowspan="3"><img class="plant_info_img" src="img/01.jpg"></td>
 					<td>紅葉鐵莧、紅桑</td>
 				</tr>
 				<tr>
@@ -52,38 +52,9 @@
 				<tr>
 					<td>大戟科 Euphorbiaceae</td>
 				</tr>
-				<tr onClick="location.href='02.html'">
-					<td rowspan="3">02</td>
-					<td rowspan="3"><img class="plant_table_img" src="img/02.jpg"></td>
-					<td>黑板樹</td>
-				</tr>
 				<tr>
-					<td>Alotonia scholaris (L.)R.Br.</td>
-				</tr>
-				<tr>
-					<td>夾竹桃科 Apocynaceae</td>
-				</tr>
-				<tr onClick="location.href='02.html'">
-					<td rowspan="3">02</td>
-					<td rowspan="3"><img class="plant_table_img" src="img/02.jpg"></td>
-					<td>黑板樹</td>
-				</tr>
-				<tr>
-					<td>Alotonia scholaris (L.)R.Br.</td>
-				</tr>
-				<tr>
-					<td>夾竹桃科 Apocynaceae</td>
-				</tr>
-				<tr onClick="location.href='03.html'">
-					<td rowspan="3">03</td>
-					<td rowspan="3"><img class="plant_table_img" src="img/03.jpg"></td>
-					<td>肯氏南洋杉</td>
-				</tr>
-				<tr>
-					<td>Araucaria cunninghamii Sweet</td>
-				</tr>
-				<tr>
-					<td>南洋杉科 Araucariaceae</td>
+					<td>介紹</td>
+					<td colspan="2">多年生灌木，葉互生，葉片有各種色彩變化，寬卵形，先端尖，葉基心形，鋸齒緣，形若桑葉，因葉常紅色，故名「紅桑」。性喜陽光也耐乾旱，雌雄同株，雄花序穗狀紅褐色，長15～25公分，小花多數簇生其上，雌花序穗狀，紅褐色，每花具一紅褐色心形苞片，子房三室，花柱紅色鬚狀，繁殖可用分株法或阡插。</td>
 				</tr>
 			</table>
 		</div>
