--- a/02.html
+++ b/02.html
@@ -41,20 +41,9 @@
 					<td>照片</td>
 					<td>名稱</td>
 				</tr>
-				<tr onClick="location.href='01.html'">
-					<td rowspan="3">01</td>
-					<td rowspan="3"><img class="plant_table_img" src="img/01.jpg"></td>
-					<td>紅葉鐵莧、紅桑</td>
-				</tr>
 				<tr>
-					<td>Acalypha wilkesianaMuell.-Arg.</td>
-				</tr>
-				<tr>
-					<td>大戟科 Euphorbiaceae</td>
-				</tr>
-				<tr onClick="location.href='02.html'">
 					<td rowspan="3">02</td>
-					<td rowspan="3"><img class="plant_table_img" src="img/02.jpg"></td>
+					<td rowspan="3"><img class="plant_info_img" src="img/02.jpg"></td>
 					<td>黑板樹</td>
 				</tr>
 				<tr>
@@ -63,27 +52,9 @@
 				<tr>
 					<td>夾竹桃科 Apocynaceae</td>
 				</tr>
-				<tr onClick="location.href='02.html'">
-					<td rowspan="3">02</td>
-					<td rowspan="3"><img class="plant_table_img" src="img/02.jpg"></td>
-					<td>黑板樹</td>
-				</tr>
 				<tr>
-					<td>Alotonia scholaris (L.)R.Br.</td>
-				</tr>
-				<tr>
-					<td>夾竹桃科 Apocynaceae</td>
-				</tr>
-				<tr onClick="location.href='03.html'">
-					<td rowspan="3">03</td>
-					<td rowspan="3"><img class="plant_table_img" src="img/03.jpg"></td>
-					<td>肯氏南洋杉</td>
-				</tr>
-				<tr>
-					<td>Araucaria cunninghamii Sweet</td>
-				</tr>
-				<tr>
-					<td>南洋杉科 Araucariaceae</td>
+					<td>介紹</td>
+					<td colspan="2">常綠喬木，枝輪生，具乳汁。葉6～10枚輪生，革質倒卵形，側脈平行。聚繖花序，花黃白色，莢果褐色，細圓柱形，叢生下垂，種子細長。樹幹挺直樹勢強健，耐風、抗污染。黑板樹是台中市之市樹。</td>
 				</tr>
 			</table>
 		</div>
