Add error data, assgin work.

--- a/campus_plant/back.html
+++ b/campus_plant/back.html
@@ -49,7 +49,7 @@
 			<button class="button button1" onclick="location.href='principal-2.html'">校長宿舍</button>
 		</div>
 		<div id="plant_table">
-			<div id="page_01" style="display:none">
+			<div id="page_01" style="display:block">
 				<table>
 				<col width="70">
 				<col width="140">
@@ -171,6 +171,7 @@
 					</tr>
 				</table>
 			</div>
+			<div id="page_02" style="display:block">
 				<table>
 				<col width="70">
 				<col width="140">
@@ -291,6 +292,7 @@
 						<td>爵床科 Acanthaceae</td>
 					</tr>
 				</table>
+			</div>
 		</div>
 		<div id="select_page" align="center">
 			<button class="button button1" onclick="forwardPage('01');">1</button>
