--- a/campus_plant/front/table.html
+++ b/campus_plant/front/table.html
@@ -307,6 +307,412 @@
 				</tr>
 			</table>
 		</div>
+		<div id="plant_table_11" style="display:none">
+			<table>
+			<col width="70">
+			<col width="140">
+			<col width="400">
+				<tr>
+					<td>編號</td>
+					<td>照片</td>
+					<td>名稱</td>
+				</tr>
+				<tr>
+					<td rowspan="3">11</td>
+					<td rowspan="3"><img class="plant_info_img" src="./11.jpg"></td>
+					<td>狗肝草、六角英、狗肝菜、華九頭獅子草、青蛇仔</td>
+				</tr>
+				<tr>
+					<td>Diclipiera chinensis Juss.</td>
+				</tr>
+				<tr>
+					<td>爵床科 Acanthaceae</td>
+				</tr>
+				<tr>
+					<td>介紹</td>
+					<td colspan="2">多年生草本，全珠被短毛，葉對生、橢圓形、兩端銳尖，葉緣為全緣或波狀緣，有葉柄。四季開花，花腋生或頂生，小花2～3朵，粉紅色唇形，外有兩片大小苞葉，果實為蒴果，棒狀。莖方形多分枝節處易生根，形成叢生狀。
+
+　　枝葉有解熱消炎功效，主治肺炎、喉痛、吐瀉、跌打損傷、急性肝炎、風濕性關節炎等。治急性肝炎時以狗肝草及茵陳莖葉（乾品）各一兩以水煎服。</td>
+				</tr>
+			</table>
+		</div>
+		<div id="plant_table_11" style="display:none">
+			<table>
+			<col width="70">
+			<col width="140">
+			<col width="400">
+				<tr>
+					<td>編號</td>
+					<td>照片</td>
+					<td>名稱</td>
+				</tr>
+				<tr>
+					<td rowspan="3">11</td>
+					<td rowspan="3"><img class="plant_info_img" src="./11.jpg"></td>
+					<td>狗肝草、六角英、狗肝菜、華九頭獅子草、青蛇仔</td>
+				</tr>
+				<tr>
+					<td>Diclipiera chinensis Juss.</td>
+				</tr>
+				<tr>
+					<td>爵床科 Acanthaceae</td>
+				</tr>
+				<tr>
+					<td>介紹</td>
+					<td colspan="2">多年生草本，全珠被短毛，葉對生、橢圓形、兩端銳尖，葉緣為全緣或波狀緣，有葉柄。四季開花，花腋生或頂生，小花2～3朵，粉紅色唇形，外有兩片大小苞葉，果實為蒴果，棒狀。莖方形多分枝節處易生根，形成叢生狀。
+
+　　枝葉有解熱消炎功效，主治肺炎、喉痛、吐瀉、跌打損傷、急性肝炎、風濕性關節炎等。治急性肝炎時以狗肝草及茵陳莖葉（乾品）各一兩以水煎服。</td>
+				</tr>
+			</table>
+		</div>
+		<div id="plant_table_11" style="display:none">
+			<table>
+			<col width="70">
+			<col width="140">
+			<col width="400">
+				<tr>
+					<td>編號</td>
+					<td>照片</td>
+					<td>名稱</td>
+				</tr>
+				<tr>
+					<td rowspan="3">11</td>
+					<td rowspan="3"><img class="plant_info_img" src="./11.jpg"></td>
+					<td>狗肝草、六角英、狗肝菜、華九頭獅子草、青蛇仔</td>
+				</tr>
+				<tr>
+					<td>Diclipiera chinensis Juss.</td>
+				</tr>
+				<tr>
+					<td>爵床科 Acanthaceae</td>
+				</tr>
+				<tr>
+					<td>介紹</td>
+					<td colspan="2">多年生草本，全珠被短毛，葉對生、橢圓形、兩端銳尖，葉緣為全緣或波狀緣，有葉柄。四季開花，花腋生或頂生，小花2～3朵，粉紅色唇形，外有兩片大小苞葉，果實為蒴果，棒狀。莖方形多分枝節處易生根，形成叢生狀。
+
+　　枝葉有解熱消炎功效，主治肺炎、喉痛、吐瀉、跌打損傷、急性肝炎、風濕性關節炎等。治急性肝炎時以狗肝草及茵陳莖葉（乾品）各一兩以水煎服。</td>
+				</tr>
+			</table>
+		</div>
+		<div id="plant_table_11" style="display:none">
+			<table>
+			<col width="70">
+			<col width="140">
+			<col width="400">
+				<tr>
+					<td>編號</td>
+					<td>照片</td>
+					<td>名稱</td>
+				</tr>
+				<tr>
+					<td rowspan="3">11</td>
+					<td rowspan="3"><img class="plant_info_img" src="./11.jpg"></td>
+					<td>狗肝草、六角英、狗肝菜、華九頭獅子草、青蛇仔</td>
+				</tr>
+				<tr>
+					<td>Diclipiera chinensis Juss.</td>
+				</tr>
+				<tr>
+					<td>爵床科 Acanthaceae</td>
+				</tr>
+				<tr>
+					<td>介紹</td>
+					<td colspan="2">多年生草本，全珠被短毛，葉對生、橢圓形、兩端銳尖，葉緣為全緣或波狀緣，有葉柄。四季開花，花腋生或頂生，小花2～3朵，粉紅色唇形，外有兩片大小苞葉，果實為蒴果，棒狀。莖方形多分枝節處易生根，形成叢生狀。
+
+　　枝葉有解熱消炎功效，主治肺炎、喉痛、吐瀉、跌打損傷、急性肝炎、風濕性關節炎等。治急性肝炎時以狗肝草及茵陳莖葉（乾品）各一兩以水煎服。</td>
+				</tr>
+			</table>
+		</div>
+		<div id="plant_table_11" style="display:none">
+			<table>
+			<col width="70">
+			<col width="140">
+			<col width="400">
+				<tr>
+					<td>編號</td>
+					<td>照片</td>
+					<td>名稱</td>
+				</tr>
+				<tr>
+					<td rowspan="3">11</td>
+					<td rowspan="3"><img class="plant_info_img" src="./11.jpg"></td>
+					<td>狗肝草、六角英、狗肝菜、華九頭獅子草、青蛇仔</td>
+				</tr>
+				<tr>
+					<td>Diclipiera chinensis Juss.</td>
+				</tr>
+				<tr>
+					<td>爵床科 Acanthaceae</td>
+				</tr>
+				<tr>
+					<td>介紹</td>
+					<td colspan="2">多年生草本，全珠被短毛，葉對生、橢圓形、兩端銳尖，葉緣為全緣或波狀緣，有葉柄。四季開花，花腋生或頂生，小花2～3朵，粉紅色唇形，外有兩片大小苞葉，果實為蒴果，棒狀。莖方形多分枝節處易生根，形成叢生狀。
+
+　　枝葉有解熱消炎功效，主治肺炎、喉痛、吐瀉、跌打損傷、急性肝炎、風濕性關節炎等。治急性肝炎時以狗肝草及茵陳莖葉（乾品）各一兩以水煎服。</td>
+				</tr>
+			</table>
+		</div>
+		<div id="plant_table_11" style="display:none">
+			<table>
+			<col width="70">
+			<col width="140">
+			<col width="400">
+				<tr>
+					<td>編號</td>
+					<td>照片</td>
+					<td>名稱</td>
+				</tr>
+				<tr>
+					<td rowspan="3">11</td>
+					<td rowspan="3"><img class="plant_info_img" src="./11.jpg"></td>
+					<td>狗肝草、六角英、狗肝菜、華九頭獅子草、青蛇仔</td>
+				</tr>
+				<tr>
+					<td>Diclipiera chinensis Juss.</td>
+				</tr>
+				<tr>
+					<td>爵床科 Acanthaceae</td>
+				</tr>
+				<tr>
+					<td>介紹</td>
+					<td colspan="2">多年生草本，全珠被短毛，葉對生、橢圓形、兩端銳尖，葉緣為全緣或波狀緣，有葉柄。四季開花，花腋生或頂生，小花2～3朵，粉紅色唇形，外有兩片大小苞葉，果實為蒴果，棒狀。莖方形多分枝節處易生根，形成叢生狀。
+
+　　枝葉有解熱消炎功效，主治肺炎、喉痛、吐瀉、跌打損傷、急性肝炎、風濕性關節炎等。治急性肝炎時以狗肝草及茵陳莖葉（乾品）各一兩以水煎服。</td>
+				</tr>
+			</table>
+		</div>
+		<div id="plant_table_11" style="display:none">
+			<table>
+			<col width="70">
+			<col width="140">
+			<col width="400">
+				<tr>
+					<td>編號</td>
+					<td>照片</td>
+					<td>名稱</td>
+				</tr>
+				<tr>
+					<td rowspan="3">11</td>
+					<td rowspan="3"><img class="plant_info_img" src="./11.jpg"></td>
+					<td>狗肝草、六角英、狗肝菜、華九頭獅子草、青蛇仔</td>
+				</tr>
+				<tr>
+					<td>Diclipiera chinensis Juss.</td>
+				</tr>
+				<tr>
+					<td>爵床科 Acanthaceae</td>
+				</tr>
+				<tr>
+					<td>介紹</td>
+					<td colspan="2">多年生草本，全珠被短毛，葉對生、橢圓形、兩端銳尖，葉緣為全緣或波狀緣，有葉柄。四季開花，花腋生或頂生，小花2～3朵，粉紅色唇形，外有兩片大小苞葉，果實為蒴果，棒狀。莖方形多分枝節處易生根，形成叢生狀。
+
+　　枝葉有解熱消炎功效，主治肺炎、喉痛、吐瀉、跌打損傷、急性肝炎、風濕性關節炎等。治急性肝炎時以狗肝草及茵陳莖葉（乾品）各一兩以水煎服。</td>
+				</tr>
+			</table>
+		</div>
+		<div id="plant_table_11" style="display:none">
+			<table>
+			<col width="70">
+			<col width="140">
+			<col width="400">
+				<tr>
+					<td>編號</td>
+					<td>照片</td>
+					<td>名稱</td>
+				</tr>
+				<tr>
+					<td rowspan="3">11</td>
+					<td rowspan="3"><img class="plant_info_img" src="./11.jpg"></td>
+					<td>狗肝草、六角英、狗肝菜、華九頭獅子草、青蛇仔</td>
+				</tr>
+				<tr>
+					<td>Diclipiera chinensis Juss.</td>
+				</tr>
+				<tr>
+					<td>爵床科 Acanthaceae</td>
+				</tr>
+				<tr>
+					<td>介紹</td>
+					<td colspan="2">多年生草本，全珠被短毛，葉對生、橢圓形、兩端銳尖，葉緣為全緣或波狀緣，有葉柄。四季開花，花腋生或頂生，小花2～3朵，粉紅色唇形，外有兩片大小苞葉，果實為蒴果，棒狀。莖方形多分枝節處易生根，形成叢生狀。
+
+　　枝葉有解熱消炎功效，主治肺炎、喉痛、吐瀉、跌打損傷、急性肝炎、風濕性關節炎等。治急性肝炎時以狗肝草及茵陳莖葉（乾品）各一兩以水煎服。</td>
+				</tr>
+			</table>
+		</div>
+		<div id="plant_table_11" style="display:none">
+			<table>
+			<col width="70">
+			<col width="140">
+			<col width="400">
+				<tr>
+					<td>編號</td>
+					<td>照片</td>
+					<td>名稱</td>
+				</tr>
+				<tr>
+					<td rowspan="3">11</td>
+					<td rowspan="3"><img class="plant_info_img" src="./11.jpg"></td>
+					<td>狗肝草、六角英、狗肝菜、華九頭獅子草、青蛇仔</td>
+				</tr>
+				<tr>
+					<td>Diclipiera chinensis Juss.</td>
+				</tr>
+				<tr>
+					<td>爵床科 Acanthaceae</td>
+				</tr>
+				<tr>
+					<td>介紹</td>
+					<td colspan="2">多年生草本，全珠被短毛，葉對生、橢圓形、兩端銳尖，葉緣為全緣或波狀緣，有葉柄。四季開花，花腋生或頂生，小花2～3朵，粉紅色唇形，外有兩片大小苞葉，果實為蒴果，棒狀。莖方形多分枝節處易生根，形成叢生狀。
+
+　　枝葉有解熱消炎功效，主治肺炎、喉痛、吐瀉、跌打損傷、急性肝炎、風濕性關節炎等。治急性肝炎時以狗肝草及茵陳莖葉（乾品）各一兩以水煎服。</td>
+				</tr>
+			</table>
+		</div>
+		<div id="plant_table_11" style="display:none">
+			<table>
+			<col width="70">
+			<col width="140">
+			<col width="400">
+				<tr>
+					<td>編號</td>
+					<td>照片</td>
+					<td>名稱</td>
+				</tr>
+				<tr>
+					<td rowspan="3">11</td>
+					<td rowspan="3"><img class="plant_info_img" src="./11.jpg"></td>
+					<td>狗肝草、六角英、狗肝菜、華九頭獅子草、青蛇仔</td>
+				</tr>
+				<tr>
+					<td>Diclipiera chinensis Juss.</td>
+				</tr>
+				<tr>
+					<td>爵床科 Acanthaceae</td>
+				</tr>
+				<tr>
+					<td>介紹</td>
+					<td colspan="2">多年生草本，全珠被短毛，葉對生、橢圓形、兩端銳尖，葉緣為全緣或波狀緣，有葉柄。四季開花，花腋生或頂生，小花2～3朵，粉紅色唇形，外有兩片大小苞葉，果實為蒴果，棒狀。莖方形多分枝節處易生根，形成叢生狀。
+
+　　枝葉有解熱消炎功效，主治肺炎、喉痛、吐瀉、跌打損傷、急性肝炎、風濕性關節炎等。治急性肝炎時以狗肝草及茵陳莖葉（乾品）各一兩以水煎服。</td>
+				</tr>
+			</table>
+		</div>
+		<div id="plant_table_11" style="display:none">
+			<table>
+			<col width="70">
+			<col width="140">
+			<col width="400">
+				<tr>
+					<td>編號</td>
+					<td>照片</td>
+					<td>名稱</td>
+				</tr>
+				<tr>
+					<td rowspan="3">11</td>
+					<td rowspan="3"><img class="plant_info_img" src="./11.jpg"></td>
+					<td>狗肝草、六角英、狗肝菜、華九頭獅子草、青蛇仔</td>
+				</tr>
+				<tr>
+					<td>Diclipiera chinensis Juss.</td>
+				</tr>
+				<tr>
+					<td>爵床科 Acanthaceae</td>
+				</tr>
+				<tr>
+					<td>介紹</td>
+					<td colspan="2">多年生草本，全珠被短毛，葉對生、橢圓形、兩端銳尖，葉緣為全緣或波狀緣，有葉柄。四季開花，花腋生或頂生，小花2～3朵，粉紅色唇形，外有兩片大小苞葉，果實為蒴果，棒狀。莖方形多分枝節處易生根，形成叢生狀。
+
+　　枝葉有解熱消炎功效，主治肺炎、喉痛、吐瀉、跌打損傷、急性肝炎、風濕性關節炎等。治急性肝炎時以狗肝草及茵陳莖葉（乾品）各一兩以水煎服。</td>
+				</tr>
+			</table>
+		</div>
+		<div id="plant_table_11" style="display:none">
+			<table>
+			<col width="70">
+			<col width="140">
+			<col width="400">
+				<tr>
+					<td>編號</td>
+					<td>照片</td>
+					<td>名稱</td>
+				</tr>
+				<tr>
+					<td rowspan="3">11</td>
+					<td rowspan="3"><img class="plant_info_img" src="./11.jpg"></td>
+					<td>狗肝草、六角英、狗肝菜、華九頭獅子草、青蛇仔</td>
+				</tr>
+				<tr>
+					<td>Diclipiera chinensis Juss.</td>
+				</tr>
+				<tr>
+					<td>爵床科 Acanthaceae</td>
+				</tr>
+				<tr>
+					<td>介紹</td>
+					<td colspan="2">多年生草本，全珠被短毛，葉對生、橢圓形、兩端銳尖，葉緣為全緣或波狀緣，有葉柄。四季開花，花腋生或頂生，小花2～3朵，粉紅色唇形，外有兩片大小苞葉，果實為蒴果，棒狀。莖方形多分枝節處易生根，形成叢生狀。
+
+　　枝葉有解熱消炎功效，主治肺炎、喉痛、吐瀉、跌打損傷、急性肝炎、風濕性關節炎等。治急性肝炎時以狗肝草及茵陳莖葉（乾品）各一兩以水煎服。</td>
+				</tr>
+			</table>
+		</div>
+		<div id="plant_table_11" style="display:none">
+			<table>
+			<col width="70">
+			<col width="140">
+			<col width="400">
+				<tr>
+					<td>編號</td>
+					<td>照片</td>
+					<td>名稱</td>
+				</tr>
+				<tr>
+					<td rowspan="3">11</td>
+					<td rowspan="3"><img class="plant_info_img" src="./11.jpg"></td>
+					<td>狗肝草、六角英、狗肝菜、華九頭獅子草、青蛇仔</td>
+				</tr>
+				<tr>
+					<td>Diclipiera chinensis Juss.</td>
+				</tr>
+				<tr>
+					<td>爵床科 Acanthaceae</td>
+				</tr>
+				<tr>
+					<td>介紹</td>
+					<td colspan="2">多年生草本，全珠被短毛，葉對生、橢圓形、兩端銳尖，葉緣為全緣或波狀緣，有葉柄。四季開花，花腋生或頂生，小花2～3朵，粉紅色唇形，外有兩片大小苞葉，果實為蒴果，棒狀。莖方形多分枝節處易生根，形成叢生狀。
+
+　　枝葉有解熱消炎功效，主治肺炎、喉痛、吐瀉、跌打損傷、急性肝炎、風濕性關節炎等。治急性肝炎時以狗肝草及茵陳莖葉（乾品）各一兩以水煎服。</td>
+				</tr>
+			</table>
+		</div>
+		<div id="plant_table_11" style="display:none">
+			<table>
+			<col width="70">
+			<col width="140">
+			<col width="400">
+				<tr>
+					<td>編號</td>
+					<td>照片</td>
+					<td>名稱</td>
+				</tr>
+				<tr>
+					<td rowspan="3">11</td>
+					<td rowspan="3"><img class="plant_info_img" src="./11.jpg"></td>
+					<td>狗肝草、六角英、狗肝菜、華九頭獅子草、青蛇仔</td>
+				</tr>
+				<tr>
+					<td>Diclipiera chinensis Juss.</td>
+				</tr>
+				<tr>
+					<td>爵床科 Acanthaceae</td>
+				</tr>
+				<tr>
+					<td>介紹</td>
+					<td colspan="2">多年生草本，全珠被短毛，葉對生、橢圓形、兩端銳尖，葉緣為全緣或波狀緣，有葉柄。四季開花，花腋生或頂生，小花2～3朵，粉紅色唇形，外有兩片大小苞葉，果實為蒴果，棒狀。莖方形多分枝節處易生根，形成叢生狀。
+
+　　枝葉有解熱消炎功效，主治肺炎、喉痛、吐瀉、跌打損傷、急性肝炎、風濕性關節炎等。治急性肝炎時以狗肝草及茵陳莖葉（乾品）各一兩以水煎服。</td>
+				</tr>
+			</table>
+		</div>
       </div>
     </div>
     <div id="content_footer"></div>
