--- a/campus_plant/principal-2.html
+++ b/campus_plant/principal-2.html
@@ -49,7 +49,7 @@
 			<button class="button button1" onclick="location.href='principal-2.html'"><b>校長宿舍</b></button>
 		</div>
 		<div id="plant_table">
-			<div id="page_01" style="display:none">
+			<div id="page_01" style="display:block">
 				<table>
 				<col width="70">
 				<col width="140">
@@ -171,6 +171,7 @@
 					</tr>
 				</table>
 			</div>
+			<div id="page_02" style="display:block">
 				<table>
 				<col width="70">
 				<col width="140">
@@ -246,51 +247,8 @@
 					<tr>
 						<td>紫茉莉科 Nyctaginaceae</td>
 					</tr>
-					<tr>
-						<td rowspan="3">07</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/07.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('07');">黃槐</td>
-					</tr>
-					<tr>
-						<td>Cassia surattensis Burm.f.</td>
-					</tr>
-					<tr>
-						<td>蘇木科 Caesalpiniaceae</td>
-					</tr>
-					<tr>
-						<td rowspan="3">08</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/08.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('08');">叢生木麻黃、千頭木麻黃</td>
-					</tr>
-					<tr>
-						<td>Casuarina equisetifolia L.</td>
-					</tr>
-					<tr>
-						<td>木麻黃科 Casuarinaceae</td>
-					</tr>
-					<tr>
-						<td rowspan="3">09</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/09.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('09');">變葉木</td>
-					</tr>
-					<tr>
-						<td>Codiaeum variegatum(L.) Juss</td>
-					</tr>
-					<tr>
-						<td>大戟科 Euphorbiaceae</td>
-					</tr>
-					<tr>
-						<td rowspan="3">10</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/10.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('10');">鳥尾花</td>
-					</tr>
-					<tr>
-						<td>Crossandra infundbuliformis(L.) Nees</td>
-					</tr>
-					<tr>
-						<td>爵床科 Acanthaceae</td>
-					</tr>
 				</table>
+			</div>
 		</div>
 		<div id="select_page" align="center">
 			<button class="button button1" onclick="forwardPage('01');">1</button>
