--- a/campus_plant/playground.html
+++ b/campus_plant/playground.html
@@ -49,7 +49,7 @@
 			<button class="button button1" onclick="location.href='principal-2.html'">校長宿舍</button>
 		</div>
 		<div id="plant_table">
-			<div id="page_01" style="display:none">
+			<div id="page_01" style="display:block">
 				<table>
 				<col width="70">
 				<col width="140">
@@ -171,6 +171,7 @@
 					</tr>
 				</table>
 			</div>
+			<div id="page_02" style="display:block">
 				<table>
 				<col width="70">
 				<col width="140">
@@ -291,6 +292,85 @@
 						<td>爵床科 Acanthaceae</td>
 					</tr>
 				</table>
+			</div>
+			<div id="page_03" style="display:block">
+				<table>
+				<col width="70">
+				<col width="140">
+				<col width="400">
+					<tr>
+						<td>編號</td>
+						<td>照片</td>
+						<td>名稱</td>
+					</tr>
+					<tr>
+						<td rowspan="3">01</td>
+						<td rowspan="3"><img class="plant_table_img" src="./front/01.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('01');">紅葉鐵莧、紅桑</td>
+					</tr>
+					<tr>
+						<td><i>Acalypha wilkesianaMuell.</i>-Arg.</td>
+					</tr>
+					<tr>
+						<td>大戟科 Euphorbiaceae</td>
+					</tr>
+					<tr>
+						<td rowspan="3">02</td>
+						<td rowspan="3"><img class="plant_table_img" src="./front/02.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('02');">黑板樹</td>
+					</tr>
+					<tr>
+						<td>Alotonia scholaris (L.)R.Br.</td>
+					</tr>
+					<tr>
+						<td>夾竹桃科 Apocynaceae</td>
+					</tr>
+					<tr>
+						<td rowspan="3">03</td>
+						<td rowspan="3"><img class="plant_table_img" src="./front/03.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('03');">肯氏南洋杉</td>
+					</tr>
+					<tr>
+						<td>Araucaria cunninghamii Sweet</td>
+					</tr>
+					<tr>
+						<td>南洋杉科 Araucariaceae</td>
+					</tr>
+					<tr>
+						<td rowspan="3">04</td>
+						<td rowspan="3"><img class="plant_table_img" src="./front/04.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('04');">黃金竹、金絲竹</td>
+					</tr>
+					<tr>
+						<td>Bambusa vulgarisSchrad Ex. Wendl.var.Striata Gamble</td>
+					</tr>
+					<tr>
+						<td>禾本科 Gramineae</td>
+					</tr>
+					<tr>
+						<td rowspan="3">05</td>
+						<td rowspan="3"><img class="plant_table_img" src="./front/05.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('05');">苧麻、裏白苧麻、真麻</td>
+					</tr>
+					<tr>
+						<td>Boehmeria nivea (L.) Gaud</td>
+					</tr>
+					<tr>
+						<td>蕁麻科 Urticaceae</td>
+					</tr>
+					<tr>
+						<td rowspan="3">06</td>
+						<td rowspan="3"><img class="plant_table_img" src="./front/06.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('06');">九重葛、三角花、三角梅、南美紫茉莉</td>
+					</tr>
+					<tr>
+						<td>Bougainvillea spp.</td>
+					</tr>
+					<tr>
+						<td>紫茉莉科 Nyctaginaceae</td>
+					</tr>
+				</table>
+			</div>
 		</div>
 		<div id="select_page" align="center">
 			<button class="button button1" onclick="forwardPage('01');">1</button>
