--- a/campus_plant/principal-2/table.html
+++ b/campus_plant/principal-2/table.html
@@ -307,6 +307,172 @@
 				</tr>
 			</table>
 		</div>
+		<div id="plant_table_01" style="display:none">
+			<table>
+			<col width="70">
+			<col width="140">
+			<col width="400">
+				<tr>
+					<td>編號</td>
+					<td>照片</td>
+					<td>名稱</td>
+				</tr>
+				<tr>
+					<td rowspan="3">01</td>
+					<td rowspan="3"><img class="plant_info_img" src="./01.jpg"></td>
+					<td>紅葉鐵莧、紅桑</td>
+				</tr>
+				<tr>
+					<td>Acalypha wilkesianaMuell.-Arg.</td>
+				</tr>
+				<tr>
+					<td>大戟科 Euphorbiaceae</td>
+				</tr>
+				<tr>
+					<td>介紹</td>
+					<td colspan="2">多年生灌木，葉互生，葉片有各種色彩變化，寬卵形，先端尖，葉基心形，鋸齒緣，形若桑葉，因葉常紅色，故名「紅桑」。性喜陽光也耐乾旱，雌雄同株，雄花序穗狀紅褐色，長15～25公分，小花多數簇生其上，雌花序穗狀，紅褐色，每花具一紅褐色心形苞片，子房三室，花柱紅色鬚狀，繁殖可用分株法或阡插。</td>
+				</tr>
+			</table>
+		</div>
+		<div id="plant_table_02" style="display:none">
+			<table>
+			<col width="70">
+			<col width="140">
+			<col width="400">
+				<tr>
+					<td>編號</td>
+					<td>照片</td>
+					<td>名稱</td>
+				</tr>
+				<tr>
+					<td rowspan="3">02</td>
+					<td rowspan="3"><img class="plant_info_img" src="./02.jpg"></td>
+					<td>黑板樹</td>
+				</tr>
+				<tr>
+					<td>Alotonia scholaris (L.)R.Br.</td>
+				</tr>
+				<tr>
+					<td>夾竹桃科 Apocynaceae</td>
+				</tr>
+				<tr>
+					<td>介紹</td>
+					<td colspan="2">常綠喬木，枝輪生，具乳汁。葉6～10枚輪生，革質倒卵形，側脈平行。聚繖花序，花黃白色，莢果褐色，細圓柱形，叢生下垂，種子細長。樹幹挺直樹勢強健，耐風、抗污染。黑板樹是台中市之市樹。</td>
+				</tr>
+			</table>
+		</div>
+		<div id="plant_table_03" style="display:none">
+			<table>
+			<col width="70">
+			<col width="140">
+			<col width="400">
+				<tr>
+					<td>編號</td>
+					<td>照片</td>
+					<td>名稱</td>
+				</tr>
+				<tr>
+					<td rowspan="3">03</td>
+					<td rowspan="3"><img class="plant_info_img" src="./03.jpg"></td>
+					<td>肯氏南洋杉</td>
+				</tr>
+				<tr>
+					<td>Araucaria cunninghamii Sweet</td>
+				</tr>
+				<tr>
+					<td>南洋杉科 Araucariaceae</td>
+				</tr>
+				<tr>
+					<td>介紹</td>
+					<td colspan="2">常綠大喬木，樹皮常片狀剝落，側枝輪生，小枝由側枝向兩側生長，葉鑿形或三稜形，硬而尖銳會刺人，螺旋狀排列於小枝上，毬果寬卵形，種子藏於果鱗內，每一鱗片內含一種子。繁殖多用種子繁殖，如以側枝、插條繁殖之苗不能直立，除供觀賞外，樹幹可做建材。</td>
+				</tr>
+			</table>
+		</div>
+		<div id="plant_table_04" style="display:none">
+			<table>
+			<col width="70">
+			<col width="140">
+			<col width="400">
+				<tr>
+					<td>編號</td>
+					<td>照片</td>
+					<td>名稱</td>
+				</tr>
+				<tr>
+					<td rowspan="3">04</td>
+					<td rowspan="3"><img class="plant_info_img" src="./04.jpg"></td>
+					<td>黃金竹、金絲竹</td>
+				</tr>
+				<tr>
+					<td>Bambusa vulgarisSchrad Ex. Wendl.var.Striata Gamble</td>
+				</tr>
+				<tr>
+					<td>禾本科 Gramineae</td>
+				</tr>
+				<tr>
+					<td>介紹</td>
+					<td colspan="2">多年生，莖中空有節，莖高可達十餘公尺，金黃色有深綠色縱紋，寬窄不一，有時呈線狀，葉長橢圓狀針形，長15～20cm，寬5～7cm，先端漸尖呈短尾狀，基部鈍或圓鈍。葉脈平行脈，葉柄短，竹子數十年才開花，開完花竹子就漸枯萎，花兩性，果為穎果。</td>
+				</tr>
+			</table>
+		</div>
+		<div id="plant_table_05" style="display:none">
+			<table>
+			<col width="70">
+			<col width="140">
+			<col width="400">
+				<tr>
+					<td>編號</td>
+					<td>照片</td>
+					<td>名稱</td>
+				</tr>
+				<tr>
+					<td rowspan="3">05</td>
+					<td rowspan="3"><img class="plant_info_img" src="./05.jpg"></td>
+					<td>苧麻、裏白苧麻、真麻</td>
+				</tr>
+				<tr>
+					<td>Boehmeria nivea (L.) Gaud</td>
+				</tr>
+				<tr>
+					<td>蕁麻科 Urticaceae</td>
+				</tr>
+				<tr>
+					<td>介紹</td>
+					<td colspan="2">常綠性亞灌木，高一至二公尺，多分枝，小枝灰褐色，有一些毛茸。葉互生具托葉，有柄，葉身廣卵形或心臟形，先端銳至銳尖，基部心形至楔形，厚質，葉緣有鈍鋸齒，上表面翠綠光滑，下表面密生白毛，主脈三條，葉柄長三至八公分，托葉披針形。雌雄同株，單性花，小花數簇成球狀，排成圓錐花序，腋出，瘦果扁卵狀，被有細毛。
+
+　　苧麻之莖富含纖維，可製繩索或織麻布是人造纖維工業未發達前的重要麻布原料，嫩莖葉及根部可做蔬菜。
+
+　　全草具有涼血安胎，清熱利尿，消炎解毒的功效。根主治肺炎、肝炎、腎炎、感冒發熱、痲疹高燒、哮喘、糖尿病、淋病、胎動不安。根外用治跌打損傷、骨折、腫毒瘡瘍。葉治肺炎、肝炎，外用治刀傷出血、虫蛇咬傷。</td>
+				</tr>
+			</table>
+		</div>
+		<div id="plant_table_06" style="display:none">
+			<table>
+			<col width="70">
+			<col width="140">
+			<col width="400">
+				<tr>
+					<td>編號</td>
+					<td>照片</td>
+					<td>名稱</td>
+				</tr>
+				<tr>
+					<td rowspan="3">06</td>
+					<td rowspan="3"><img class="plant_info_img" src="./06.jpg"></td>
+					<td>九重葛、三角花、三角梅、南美紫茉莉</td>
+				</tr>
+				<tr>
+					<td>Bougainvillea spp.</td>
+				</tr>
+				<tr>
+					<td>紫茉莉科Nyctaginaceae</td>
+				</tr>
+				<tr>
+					<td>介紹</td>
+					<td colspan="2">常綠蔓性灌木，葉互生，葉腋長有刺，枝葉生長茂密，葉全緣，心臟形或三角形，花小形而不顯著，筒狀5～6裂，雄蕊7～8枚，子房有柄，花外有大形顯著之花瓣狀苞片，一般誤以為花，苞片之顏色有紅、紫、白、黃、粉紅等，苞片有單瓣、重瓣之品種，花期多在冬春季。九重葛為屏東縣之縣樹，繁殖法，重瓣品種用高壓，單瓣品種用插枝，於春季施行育苗工作。</td>
+				</tr>
+			</table>
+		</div>
       </div>
     </div>
     <div id="content_footer"></div>
